# app-notification

./: .gitignore  manage.py  pyproject.toml
app_notifications/: asgi.py  settings.py  urls.py  wsgi.py
src/: urls.py  views.py
src/management/commands/: process_queue.py
templates/: add_task.html
